weechat: update settings.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -137,7 +137,7 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
-ssl = on
+ssl = off
 ssl_cert = "%h/ssl/irc-5225225.pem"
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
@@ -149,7 +149,7 @@ username = ""
 foonetic.addresses = "anchor.foonetic.net/6697,staticfree.foonetic.net/6697"
 foonetic.proxy
 foonetic.ipv6
-foonetic.ssl
+foonetic.ssl = on
 foonetic.ssl_cert
 foonetic.ssl_priorities
 foonetic.ssl_dhkey_size
@@ -188,7 +188,7 @@ foonetic.notify
 freenode.addresses = "chat.freenode.net/6697"
 freenode.proxy
 freenode.ipv6
-freenode.ssl
+freenode.ssl = on
 freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
@@ -212,7 +212,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#android,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#android-root,#zeronet #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -227,7 +227,7 @@ freenode.notify
 furnet.addresses = "lynx.furnet.org/6697"
 furnet.proxy
 furnet.ipv6
-furnet.ssl
+furnet.ssl = on
 furnet.ssl_cert
 furnet.ssl_priorities
 furnet.ssl_dhkey_size
@@ -237,7 +237,7 @@ furnet.password = "${sec.data.furnet}"
 furnet.capabilities
 furnet.sasl_mechanism
 furnet.sasl_username
-furnet.sasl_password
+furnet.sasl_password = "${sec.data.furnet}"
 furnet.sasl_key
 furnet.sasl_timeout
 furnet.sasl_fail
@@ -263,84 +263,6 @@ furnet.default_msg_kick
 furnet.default_msg_part
 furnet.default_msg_quit
 furnet.notify
-quakenet.addresses = "euroserv.fr.quakenet.org"
-quakenet.proxy
-quakenet.ipv6
-quakenet.ssl = off
-quakenet.ssl_cert
-quakenet.ssl_priorities
-quakenet.ssl_dhkey_size
-quakenet.ssl_fingerprint
-quakenet.ssl_verify
-quakenet.password
-quakenet.capabilities
-quakenet.sasl_mechanism
-quakenet.sasl_username
-quakenet.sasl_password
-quakenet.sasl_key
-quakenet.sasl_timeout
-quakenet.sasl_fail
-quakenet.autoconnect
-quakenet.autoreconnect
-quakenet.autoreconnect_delay
-quakenet.nicks
-quakenet.nicks_alternate
-quakenet.username
-quakenet.realname
-quakenet.local_hostname
-quakenet.command = "/challengeauth irc-5225225 ${sec.data.quakenet}"
-quakenet.command_delay = 5
-quakenet.autojoin = "#Quakenet,#xonotic,#xonotic.pickup"
-quakenet.autorejoin
-quakenet.autorejoin_delay
-quakenet.connection_timeout
-quakenet.anti_flood_prio_high
-quakenet.anti_flood_prio_low
-quakenet.away_check
-quakenet.away_check_max_nicks
-quakenet.default_msg_kick
-quakenet.default_msg_part
-quakenet.default_msg_quit
-quakenet.notify
-snoonet.addresses = "eu-irc.snoonet.org/6697"
-snoonet.proxy
-snoonet.ipv6
-snoonet.ssl
-snoonet.ssl_cert
-snoonet.ssl_priorities
-snoonet.ssl_dhkey_size
-snoonet.ssl_fingerprint
-snoonet.ssl_verify
-snoonet.password
-snoonet.capabilities
-snoonet.sasl_mechanism
-snoonet.sasl_username
-snoonet.sasl_password = "${sec.data.snoonet}"
-snoonet.sasl_key
-snoonet.sasl_timeout
-snoonet.sasl_fail
-snoonet.autoconnect
-snoonet.autoreconnect
-snoonet.autoreconnect_delay
-snoonet.nicks
-snoonet.nicks_alternate
-snoonet.username
-snoonet.realname
-snoonet.local_hostname
-snoonet.command
-snoonet.command_delay
-snoonet.autojoin = "#britishpolitics,#casualconversation,#linuxmasterrace,#programming,#reddit,#uk"
-snoonet.autorejoin
-snoonet.autorejoin_delay
-snoonet.connection_timeout
-snoonet.anti_flood_prio_high
-snoonet.anti_flood_prio_low
-snoonet.away_check
-snoonet.away_check_max_nicks
-snoonet.default_msg_kick
-snoonet.default_msg_part
-snoonet.default_msg_quit
-snoonet.notify
 twitch.addresses = "irc.chat.twitch.tv/6667"
 twitch.proxy
 twitch.ipv6
@@ -380,14 +302,14 @@ twitch.default_msg_kick
 twitch.default_msg_part
 twitch.default_msg_quit
 twitch.notify
-nixers.addresses = "irc.unix.chat/6697"
+nixers.addresses = "unix.chat/6697"
 nixers.proxy
 nixers.ipv6
-nixers.ssl
+nixers.ssl = on
 nixers.ssl_cert
 nixers.ssl_priorities
 nixers.ssl_dhkey_size
-nixers.ssl_fingerprint
+nixers.ssl_fingerprint = "b8c4c5e12b56dc3dd21e5cfccf71d23bb7c8ff8e"
 nixers.ssl_verify
 nixers.password = "${sec.data.nixers}"
 nixers.capabilities
@@ -400,7 +322,7 @@ nixers.sasl_fail
 nixers.autoconnect
 nixers.autoreconnect
 nixers.autoreconnect_delay
-nixers.nicks
+nixers.nicks = "i522"
 nixers.nicks_alternate
 nixers.username
 nixers.realname
@@ -458,3 +380,81 @@ bitlbee.default_msg_kick
 bitlbee.default_msg_part
 bitlbee.default_msg_quit
 bitlbee.notify
+overthewire.addresses = "ircs.overthewire.org/6697"
+overthewire.proxy
+overthewire.ipv6
+overthewire.ssl = on
+overthewire.ssl_cert
+overthewire.ssl_priorities
+overthewire.ssl_dhkey_size
+overthewire.ssl_fingerprint
+overthewire.ssl_verify
+overthewire.password
+overthewire.capabilities
+overthewire.sasl_mechanism
+overthewire.sasl_username
+overthewire.sasl_password
+overthewire.sasl_key
+overthewire.sasl_timeout
+overthewire.sasl_fail
+overthewire.autoconnect
+overthewire.autoreconnect
+overthewire.autoreconnect_delay
+overthewire.nicks
+overthewire.nicks_alternate
+overthewire.username
+overthewire.realname
+overthewire.local_hostname
+overthewire.command
+overthewire.command_delay
+overthewire.autojoin
+overthewire.autorejoin
+overthewire.autorejoin_delay
+overthewire.connection_timeout
+overthewire.anti_flood_prio_high
+overthewire.anti_flood_prio_low
+overthewire.away_check
+overthewire.away_check_max_nicks
+overthewire.default_msg_kick
+overthewire.default_msg_part
+overthewire.default_msg_quit
+overthewire.notify
+oftc.addresses = "irc.oftc.net"
+oftc.proxy
+oftc.ipv6
+oftc.ssl
+oftc.ssl_cert
+oftc.ssl_priorities
+oftc.ssl_dhkey_size
+oftc.ssl_fingerprint
+oftc.ssl_verify
+oftc.password
+oftc.capabilities
+oftc.sasl_mechanism
+oftc.sasl_username
+oftc.sasl_password
+oftc.sasl_key
+oftc.sasl_timeout
+oftc.sasl_fail
+oftc.autoconnect
+oftc.autoreconnect
+oftc.autoreconnect_delay
+oftc.nicks
+oftc.nicks_alternate
+oftc.username
+oftc.realname
+oftc.local_hostname
+oftc.command
+oftc.command_delay
+oftc.autojoin
+oftc.autorejoin
+oftc.autorejoin_delay
+oftc.connection_timeout
+oftc.anti_flood_prio_high
+oftc.anti_flood_prio_low
+oftc.away_check
+oftc.away_check_max_nicks
+oftc.default_msg_kick
+oftc.default_msg_part
+oftc.default_msg_quit
+oftc.notify
