--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -45,6 +45,14 @@ perl.nickregain.nixers_command = ""
 perl.nickregain.nixers_command_delay = "0"
 perl.nickregain.nixers_delay = "60"
 perl.nickregain.nixers_enabled = "on"
+perl.nickregain.oftc_command = ""
+perl.nickregain.oftc_command_delay = "0"
+perl.nickregain.oftc_delay = "60"
+perl.nickregain.oftc_enabled = "off"
+perl.nickregain.overthewire_command = ""
+perl.nickregain.overthewire_command_delay = "0"
+perl.nickregain.overthewire_delay = "60"
+perl.nickregain.overthewire_enabled = "off"
 perl.nickregain.quakenet_command = ""
 perl.nickregain.quakenet_command_delay = "0"
 perl.nickregain.quakenet_delay = "60"
@@ -63,11 +71,28 @@ python.apply_corrections.message_limit = "2"
 python.apply_corrections.print_format = "[nick]: [corrected]"
 python.apply_corrections.print_limit = "1"
 python.autojoin.autosave = "on"
+python.bitlbee_typing_notice.channel = "&bitlbee"
+python.bitlbee_typing_notice.server = "bitlbee"
+python.bitlbee_typing_notice.timeout = "30"
+python.buffer_autoclose.age_limit = "60"
+python.buffer_autoclose.ignore = ""
+python.buffer_autoclose.interval = "1"
 python.chanstat.average_period = "30"
 python.chanstat.path = "%h/chanstat"
 python.chanstat.show_lows = "off"
 python.chanstat.show_peaks = "off"
 python.check_license = "off"
+python.go.auto_jump = "off"
+python.go.color_name = "black,cyan"
+python.go.color_name_highlight = "red,cyan"
+python.go.color_name_highlight_selected = "red,brown"
+python.go.color_name_selected = "black,brown"
+python.go.color_number = "yellow,magenta"
+python.go.color_number_selected = "yellow,red"
+python.go.message = "Go to: "
+python.go.short_name = "off"
+python.go.sort = "number,beginning"
+python.go.use_core_instead_weechat = "off"
 python.listbuffer.autofocus = "on"
 python.listbuffer.channel_min_width = "25"
 python.listbuffer.modes_min_width = "8"
@@ -100,6 +125,14 @@ python.notify_send.notify_on_privmsgs = "on"
 python.notify_send.notify_when_away = "on"
 python.notify_send.timeout = "5000"
 python.notify_send.urgency = "normal"
+python.shortenurl.bitly_add_to_history = "true"
+python.shortenurl.bitly_key = ""
+python.shortenurl.bitly_login = ""
+python.shortenurl.color = "red"
+python.shortenurl.ignore_list = "http://is.gd,http://tinyurl.com,http://bit.ly"
+python.shortenurl.short_own = "off"
+python.shortenurl.shortener = "isgd"
+python.shortenurl.urllength = "30"
 python.urlserver.buffer_short_name = "off"
 python.urlserver.color = "darkgray"
 python.urlserver.color_in_msg = ""
@@ -165,6 +198,17 @@ python.apply_corrections.data_timeout = "Time before a message is expired."
 python.apply_corrections.message_limit = "Number of messages to store per nick."
 python.apply_corrections.print_format = "Format string for the printed corrections."
 python.apply_corrections.print_limit = "Maximum number of lines to correct."
+python.go.auto_jump = "automatically jump to buffer when it is uniquely selected (default: "off")"
+python.go.color_name = "color for buffer name (not selected) (default: "black,cyan")"
+python.go.color_name_highlight = "color for highlight in buffer name (not selected) (default: "red,cyan")"
+python.go.color_name_highlight_selected = "color for highlight in a selected buffer name (default: "red,brown")"
+python.go.color_name_selected = "color for a selected buffer name (default: "black,brown")"
+python.go.color_number = "color for buffer number (not selected) (default: "yellow,magenta")"
+python.go.color_number_selected = "color for selected buffer number (default: "yellow,red")"
+python.go.message = "message to display before list of buffers (default: "Go to: ")"
+python.go.short_name = "display and search in short names instead of buffer name (default: "off")"
+python.go.sort = "comma-separated list of keys to sort buffers (the order is important, sorts are performed in the given order): name = sort by name (or short name),  (default: "number,beginning")"
+python.go.use_core_instead_weechat = "use name "core" instead of "weechat" for core buffer (default: "off")"
 python.listbuffer.autofocus = "Focus the listbuffer in the current window if it isn't already displayed by a window."
 python.listbuffer.channel_min_width = "The minimum width used for the channel name in the channel list. If a channelname is shorter than this amount, the column will be padded with spaces."
 python.listbuffer.modes_min_width = "The minimum width used for modes in the channel list. If a channel has less modes than this amount, the column will be padded with spaces."
