--- a/weechat/.config/weechat/relay.conf
+++ b/weechat/.config/weechat/relay.conf
@@ -24,7 +24,7 @@ clients_purge_delay = 0
 compression_level = 6
 ipv6 = on
 max_clients = 5
-password = "password"
+password = ""
 ssl_cert_key = "%h/ssl/relay.pem"
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 websocket_allowed_origins = ""
