--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -20,7 +20,7 @@ bar_more_up = "--"
 bare_display_exit_on_input = on
 bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
-buffer_notify_default = all
+buffer_notify_default = message
 buffer_position = end
 buffer_search_case_sensitive = off
 buffer_search_force_default = off
@@ -266,7 +266,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -340,10 +340,9 @@ ctrl-Cv = "/input insert \x16"
 ctrl-D = "/input delete_next_char"
 ctrl-E = "/input move_end_of_line"
 ctrl-F = "/input move_next_char"
+ctrl-G = "/go"
 ctrl-H = "/input delete_previous_char"
 ctrl-I = "/input complete_next"
-ctrl-J = "/input return"
-ctrl-K = "/input delete_end_of_line"
 ctrl-L = "/window refresh"
 ctrl-M = "/input return"
 ctrl-N = "/buffer +1"
@@ -435,7 +434,6 @@ meta2-Z = "/input complete_previous"
 meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
 meta-a = "/input jump_smart"
-meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
 meta-h = "/input hotlist_clear"
