weechat: Update options.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -120,11 +120,11 @@ capabilities = "account-notify,away-notify,cap-notify,multi-prefix,server-time,z
 command = ""
 command_delay = 0
 connection_timeout = 60
-default_msg_kick = ""
-default_msg_part = "WeeChat %v"
-default_msg_quit = "bye"
 ipv6 = on
 local_hostname = ""
+msg_kick = ""
+msg_part = "WeeChat ${info:version}"
+msg_quit = "WeeChat ${info:version}"
 nicks = "irc-5225225"
 nicks_alternate = on
 notify = ""
@@ -181,9 +181,9 @@ foonetic.anti_flood_prio_high
 foonetic.anti_flood_prio_low
 foonetic.away_check
 foonetic.away_check_max_nicks
-foonetic.default_msg_kick
-foonetic.default_msg_part
-foonetic.default_msg_quit
+foonetic.msg_kick
+foonetic.msg_part
+foonetic.msg_quit
 foonetic.notify
 freenode.addresses = "chat.freenode.net/6697"
 freenode.proxy
@@ -220,9 +220,9 @@ freenode.anti_flood_prio_high
 freenode.anti_flood_prio_low
 freenode.away_check
 freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
+freenode.msg_kick
+freenode.msg_part
+freenode.msg_quit
 freenode.notify
 furnet.addresses = "lynx.furnet.org/6697"
 furnet.proxy
@@ -259,9 +259,9 @@ furnet.anti_flood_prio_high
 furnet.anti_flood_prio_low
 furnet.away_check
 furnet.away_check_max_nicks
-furnet.default_msg_kick
-furnet.default_msg_part
-furnet.default_msg_quit
+furnet.msg_kick
+furnet.msg_part
+furnet.msg_quit
 furnet.notify
 twitch.addresses = "irc.chat.twitch.tv/6667"
 twitch.proxy
@@ -298,9 +298,9 @@ twitch.anti_flood_prio_high
 twitch.anti_flood_prio_low
 twitch.away_check
 twitch.away_check_max_nicks
-twitch.default_msg_kick
-twitch.default_msg_part
-twitch.default_msg_quit
+twitch.msg_kick
+twitch.msg_part
+twitch.msg_quit
 twitch.notify
 nixers.addresses = "unix.chat/6697"
 nixers.proxy
@@ -337,9 +337,9 @@ nixers.anti_flood_prio_high
 nixers.anti_flood_prio_low
 nixers.away_check
 nixers.away_check_max_nicks
-nixers.default_msg_kick
-nixers.default_msg_part
-nixers.default_msg_quit
+nixers.msg_kick
+nixers.msg_part
+nixers.msg_quit
 nixers.notify
 bitlbee.addresses = "localhost"
 bitlbee.proxy
@@ -376,9 +376,9 @@ bitlbee.anti_flood_prio_high
 bitlbee.anti_flood_prio_low
 bitlbee.away_check
 bitlbee.away_check_max_nicks
-bitlbee.default_msg_kick
-bitlbee.default_msg_part
-bitlbee.default_msg_quit
+bitlbee.msg_kick
+bitlbee.msg_part
+bitlbee.msg_quit
 bitlbee.notify
 overthewire.addresses = "ircs.overthewire.org/6697"
 overthewire.proxy
@@ -415,9 +415,9 @@ overthewire.anti_flood_prio_high
 overthewire.anti_flood_prio_low
 overthewire.away_check
 overthewire.away_check_max_nicks
-overthewire.default_msg_kick
-overthewire.default_msg_part
-overthewire.default_msg_quit
+overthewire.msg_kick
+overthewire.msg_part
+overthewire.msg_quit
 overthewire.notify
 oftc.addresses = "irc.oftc.net"
 oftc.proxy
@@ -454,7 +454,7 @@ oftc.anti_flood_prio_high
 oftc.anti_flood_prio_low
 oftc.away_check
 oftc.away_check_max_nicks
-oftc.default_msg_kick
-oftc.default_msg_part
-oftc.default_msg_quit
+oftc.msg_kick
+oftc.msg_part
+oftc.msg_quit
 oftc.notify
