weechat: Add some files.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -212,7 +212,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -251,7 +251,7 @@ furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#gamerfurs,#SoftPaws,#uk,#linux,#TechFurs"
+furnet.autojoin = "#gamerfurs,#SoftPaws"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
