--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -79,8 +79,8 @@ python.buffer_autoclose.ignore = ""
 python.buffer_autoclose.interval = "1"
 python.chanstat.average_period = "30"
 python.chanstat.path = "%h/chanstat"
-python.chanstat.show_lows = "off"
-python.chanstat.show_peaks = "off"
+python.chanstat.show_lows = "on"
+python.chanstat.show_peaks = "on"
 python.check_license = "off"
 python.go.auto_jump = "off"
 python.go.color_name = "black,cyan"
