--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -36,7 +36,7 @@
 #
 # startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
-#     Default: https://duckduckgo.com
+#     Default: https://start.duckduckgo.com
 #
 # yank-ignored-url-parameters (List of String):
 #     The URL parameters to strip with :yank url, separated by commas.
@@ -365,6 +365,11 @@ keyhint-blacklist =
 # custom-headers (HeaderDict):
 #     Set custom headers for qutebrowser HTTP requests.
 #     Default:
+#
+# netrc-file (File):
+#     Set location of a netrc-file for HTTP authentication. If empty,
+#     ~/.netrc is used.
+#     Default:
 do-not-track = true
 accept-language = en-US,en
 referer-header = same-domain
@@ -374,6 +379,7 @@ proxy-dns-requests = true
 ssl-strict = ask
 dns-prefetch = true
 custom-headers = 
+netrc-file = 
 
 [completion]
 # Options related to completion and command history.
@@ -855,7 +861,7 @@ cache-size = 52428800
 #     - A zip-file of any of the above, with either only one file, or a
 #     file named 'hosts' (with any extension).
 #     Default:
-#     http://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,http://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
+#     https://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 #
 # host-blocking-enabled (Bool):
 #     Whether host blocking is enabled.
@@ -1003,7 +1009,7 @@ DEFAULT = https://duckduckgo.com/?q={}
 # Aliases for commands.
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
-# `qtb = open http://www.qutebrowser.org/`
+# `qtb = open https://www.qutebrowser.org/`
 
 [colors]
 # Colors used in the UI.
