qutebrowser: Automatic changes done by updates.

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -294,6 +294,10 @@ url-incdec-segments = path,query
 #     Globs are supported, so ';*' will blacklist all keychainsstarting
 #     with ';'. Use '*' to disable keyhints
 #     Default:
+#
+# prompt-radius (Int):
+#     The rounding radius for the edges of prompts.
+#     Default: 8
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
 default-zoom = 100%
 downloads-position = top
@@ -313,6 +317,7 @@ window-title-format = {perc}{title}{title_sep}qutebrowser
 modal-js-dialog = false
 hide-wayland-decoration = false
 keyhint-blacklist = 
+prompt-radius = 8
 
 [network]
 # Settings related to the network.
@@ -1091,14 +1096,6 @@ DEFAULT = https://duckduckgo.com/?q={}
 #     Background color of the statusbar.
 #     Default: black
 #
-# statusbar.fg.prompt (QssColor):
-#     Foreground color of the statusbar if there is a prompt.
-#     Default: ${statusbar.fg}
-#
-# statusbar.bg.prompt (QssColor):
-#     Background color of the statusbar if there is a prompt.
-#     Default: darkblue
-#
 # statusbar.fg.insert (QssColor):
 #     Foreground color of the statusbar in insert mode.
 #     Default: ${statusbar.fg}
@@ -1328,6 +1325,18 @@ DEFAULT = https://duckduckgo.com/?q={}
 # messages.border.info (QssColor):
 #     Border color of an info message.
 #     Default: #333333
+#
+# prompts.fg (QssColor):
+#     Foreground color for prompts.
+#     Default: white
+#
+# prompts.bg (QssColor):
+#     Background color for prompts.
+#     Default: darkblue
+#
+# prompts.selected.bg (QssColor):
+#     Background color for the selected item in filename prompts.
+#     Default: #308cc6
 completion.fg = #dddddd
 completion.bg = #181818
 completion.alternate-bg = #181818
@@ -1344,8 +1353,6 @@ completion.scrollbar.fg = ${completion.bg}
 completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = white
 statusbar.bg = #181818
-statusbar.fg.prompt = ${statusbar.fg}
-statusbar.bg.prompt = darkblue
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = darkgreen
 statusbar.fg.command = ${statusbar.fg}
@@ -1399,6 +1406,9 @@ messages.border.warning = #d47300
 messages.fg.info = white
 messages.bg.info = black
 messages.border.info = #333333
+prompts.fg = ${statusbar.fg}
+prompts.bg = darkblue
+prompts.selected.bg = #308cc6
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1495,6 +1505,10 @@ messages.border.info = #333333
 # messages.info (Font):
 #     Font used for info messages.
 #     Default: 8pt ${_monospace}
+#
+# prompts (Font):
+#     Font used for prompts.
+#     Default: 8pt sans-serif
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
 completion.category = bold ${completion}
@@ -1517,3 +1531,4 @@ keyhint = 8pt ${_monospace}
 messages.error = 8pt ${_monospace}
 messages.warning = 8pt ${_monospace}
 messages.info = 8pt ${_monospace}
+prompts = 8pt sans-serif
