--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -551,6 +551,14 @@ prompt-accept no
 prompt-open-download
     <ctrl-x>
 
+prompt-item-focus prev
+    <shift-tab>
+    <up>
+
+prompt-item-focus next
+    <tab>
+    <down>
+
 [command,prompt]
 
 rl-backward-char
