weechat: Some changes.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -185,23 +185,23 @@ foonetic.msg_kick
 foonetic.msg_part
 foonetic.msg_quit
 foonetic.notify
-freenode.addresses = "chat.freenode.net/6697"
-freenode.proxy
+freenode.addresses = "freenodeok2gncmy.onion/6697"
+freenode.proxy = "tor"
 freenode.ipv6
 freenode.ssl = on
 freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
-freenode.ssl_verify
+freenode.ssl_verify = off
 freenode.password
 freenode.capabilities
-freenode.sasl_mechanism
+freenode.sasl_mechanism = external
 freenode.sasl_username
 freenode.sasl_password
 freenode.sasl_key
 freenode.sasl_timeout
-freenode.sasl_fail
+freenode.sasl_fail = disconnect
 freenode.autoconnect
 freenode.autoreconnect
 freenode.autoreconnect_delay
@@ -251,7 +251,7 @@ furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#gamerfurs,#SoftPaws"
+furnet.autojoin = "#gamerfurs,#SoftPaws,#redditfurs,#uk"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -458,3 +458,42 @@ oftc.msg_kick
 oftc.msg_part
 oftc.msg_quit
 oftc.notify
+efnet.addresses = "efnet.port80.se"
+efnet.proxy
+efnet.ipv6
+efnet.ssl = off
+efnet.ssl_cert
+efnet.ssl_priorities
+efnet.ssl_dhkey_size
+efnet.ssl_fingerprint
+efnet.ssl_verify
+efnet.password
+efnet.capabilities
+efnet.sasl_mechanism
+efnet.sasl_username
+efnet.sasl_password
+efnet.sasl_key
+efnet.sasl_timeout
+efnet.sasl_fail
+efnet.autoconnect
+efnet.autoreconnect
+efnet.autoreconnect_delay
+efnet.nicks
+efnet.nicks_alternate
+efnet.username
+efnet.realname
+efnet.local_hostname
+efnet.command
+efnet.command_delay
+efnet.autojoin = "#scenesat"
+efnet.autorejoin
+efnet.autorejoin_delay
+efnet.connection_timeout
+efnet.anti_flood_prio_high
+efnet.anti_flood_prio_low
+efnet.away_check
+efnet.away_check_max_nicks
+efnet.msg_kick
+efnet.msg_part
+efnet.msg_quit
+efnet.notify
