--- a/weechat/.config/weechat/plugins.conf
+++ b/weechat/.config/weechat/plugins.conf
@@ -29,6 +29,10 @@ perl.nickregain.bitlbee_command = ""
 perl.nickregain.bitlbee_command_delay = "0"
 perl.nickregain.bitlbee_delay = "60"
 perl.nickregain.bitlbee_enabled = "off"
+perl.nickregain.efnet_command = ""
+perl.nickregain.efnet_command_delay = "0"
+perl.nickregain.efnet_delay = "60"
+perl.nickregain.efnet_enabled = "off"
 perl.nickregain.foonetic_command = ""
 perl.nickregain.foonetic_command_delay = "0"
 perl.nickregain.foonetic_delay = "60"
