--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -217,6 +217,12 @@ max_commands = 100
 max_visited_buffers = 50
 
 [proxy]
+tor.address = "localhost"
+tor.ipv6 = off
+tor.password = ""
+tor.port = 9050
+tor.type = socks5
+tor.username = ""
 
 [network]
 connection_timeout = 60
@@ -266,7 +272,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
