i3blocks: add pgrep module
This will tell you if any processes are running. I have it running for
my backup script, so I know if it's going on for a long time.

--- a/i3blocks/.config/i3blocks/config
+++ b/i3blocks/.config/i3blocks/config
@@ -33,6 +33,10 @@ interval=1
 interval=repeat
 color="ab4642"
 
+[pgrep]
+instance=backup.sh
+color="7cafc2"
+
 [updates]
 interval=3600
 color="a1b56c"
