qutebrowser: add autogenerated keys conf
Adds macros. Interesting.

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -445,6 +445,12 @@ set-cmd-text :
 tab-next
     <ctrl-pgdown>
 
+record-macro
+    q
+
+run-macro
+    @
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
