weechat: auto authenticate to bitlbee
The password isn't great, but that server is only available to me. And I
*have* to have a password.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -350,7 +350,7 @@ bitlbee.ssl_priorities
 bitlbee.ssl_dhkey_size
 bitlbee.ssl_fingerprint
 bitlbee.ssl_verify
-bitlbee.password
+bitlbee.password = "password"
 bitlbee.capabilities
 bitlbee.sasl_mechanism
 bitlbee.sasl_username
