--- a/weechat/.config/weechat/weechat.conf
+++ b/weechat/.config/weechat/weechat.conf
@@ -272,7 +272,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
+isetbar.hidden = off
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -329,9 +329,9 @@ title.type = window
 
 [filter]
 irc_smart = on;*,!*&bitlbee*;irc_smart_filter;*
-hidemodes = on;irc.bitlbee.&bitlbee;irc_mode;*
-hidequit = on;irc.bitlbee.&bitlbee;irc_quit;*
-hidejoin = on;irc.bitlbee.&bitlbee;irc_join;*
+hidemodes = on;irc.bitlbee*;irc_mode;*
+hidequit = on;irc.bitlbee*;irc_quit;*
+hidejoin = on;irc.bitlbee*;irc_join;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
