qutebrowser: some changes to the keys

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -64,24 +64,21 @@ set-cmd-text :open -t {url:pretty}
 set-cmd-text -s :quickmark-load
     go
 
-set-cmd-text -s :open -b
+<unbound>
     xo
-
-set-cmd-text :open -b {url:pretty}
     xO
+    ga
+    gC
+    th
+    wh
+    tl
+    wl
 
 set-cmd-text -s :open -w
-    wo
+    w
 
 set-cmd-text :open -w {url:pretty}
-    wO
-
-open -t
-    ga
-    <ctrl-t>
-
-open -w
-    <ctrl-n>
+    W
 
 tab-close
     d
@@ -108,9 +105,6 @@ tab-move +
 tab-prev
     K
 
-tab-clone
-    gC
-
 reload
     r
     <f5>
@@ -130,7 +124,7 @@ fullscreen
     <f11>
 
 hint
-    f
+    <alt-u>
 
 hint all tab
     F
@@ -193,7 +187,7 @@ scroll right
     l
 
 undo
-    u
+    z
     <ctrl-shift-t>
 
 scroll-perc 0
@@ -328,21 +322,6 @@ tab-focus last
 enter-mode passthrough
     <ctrl-v>
 
-quit
-    <ctrl-q>
-
-scroll-page 0 1
-    <ctrl-f>
-
-scroll-page 0 -1
-    <ctrl-b>
-
-scroll-page 0 0.5
-    <ctrl-d>
-
-scroll-page 0 -0.5
-    <ctrl-u>
-
 tab-focus 1
     <alt-1>
 
@@ -406,12 +385,6 @@ set-cmd-text -s :quickmark-load -w
 yank
     yy
 
-<unbound>
-    th
-    wh
-    tl
-    wl
-
 yank title
     yt
 
@@ -450,6 +423,27 @@ record-macro
 
 run-macro
     @
+
+open -t
+    <ctrl-t>
+
+open -w
+    <ctrl-n>
+
+quit
+    <ctrl-q>
+
+scroll-page 0 1
+    <ctrl-f>
+
+scroll-page 0 -1
+    <ctrl-b>
+
+scroll-page 0 0.5
+    <ctrl-d>
+
+scroll-page 0 -0.5
+    <ctrl-u>
 
 [insert]
 # Keybindings for insert mode.
