weechat: move who to weechat buffer

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -94,7 +94,7 @@ send_unknown_commands = on
 whois_double_nick = off
 
 [msgbuffer]
-who = current
+who = weechat
 whois = current
 whowas = current
 
