--- a/i3blocks/.config/i3blocks/config
+++ b/i3blocks/.config/i3blocks/config
@@ -33,6 +33,12 @@ interval=1
 interval=repeat
 color="ab4642"
 
+[pubip]
+interval=60
+
+[memory]
+color="ab4642"
+
 [swap]
 color="ab4642"
 
@@ -63,4 +69,3 @@ markup=pango
 [idlelock]
 
 [time]
-
