--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -85,7 +85,8 @@
 # developer-extras (Bool):
 #     Enable extra tools for Web developers.
 #     This needs to be enabled for `:inspector` to work and also adds an
-#     _Inspect_ entry to the context menu.
+#     _Inspect_ entry to the context menu. For QtWebEngine, see
+#     'qutebrowser --help' instead.
 #     Valid values: true, false
 #     Default: false
 #
@@ -237,11 +238,15 @@ url-incdec-segments = path,query
 #     Valid values: true, false
 #     Default: false
 #
-# user-stylesheet (UserStyleSheet):
-#     User stylesheet to use (absolute filename, filename relative to
-#     the config directory or CSS string). Will expand environment
-#     variables.
-#     Default: html > ::-webkit-scrollbar { width: 0px; height: 0px; }
+# user-stylesheet (File):
+#     User stylesheet to use (absolute filename or filename relative to
+#     the config directory). Will expand environment variables.
+#     Default:
+#
+# hide-scrollbar (Bool):
+#     Hide the main scrollbar.
+#     Valid values: true, false
+#     Default: true
 #
 # css-media-type (String):
 #     Set the CSS media type.
@@ -277,6 +282,7 @@ url-incdec-segments = path,query
 #     * `{id}`: The internal window ID of this window.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
 # modal-js-dialog (Bool):
@@ -307,10 +313,11 @@ message-unfocused = false
 confirm-quit = never
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
+user-stylesheet = 
+hide-scrollbar = true
 css-media-type = 
 smooth-scrolling = true
-remove-finished-downloads = -1
+remove-finished-downloads = 5000
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
 window-title-format = {perc}{title}{title_sep}qutebrowser
@@ -636,6 +643,7 @@ mouse-zoom-divider = 512
 #     * `{id}`: The internal tab ID of this tab.
 #     * `{scroll_pos}`: The page scroll position.
 #     * `{host}`: The host of the current web page.
+#     * `{backend}`: Either 'webkit' or 'webengine'
 #     Default: {index}: {title}
 #
 # title-alignment (TextAlignment):
@@ -1394,7 +1402,7 @@ hints.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 247, 133, 0.
 hints.fg.match = green
 downloads.bg.bar = #181818
 downloads.fg.start = white
-downloads.bg.start = #0000aa
+downloads.bg.start = #aa0000
 downloads.fg.stop = ${downloads.fg.start}
 downloads.bg.stop = #00aa00
 downloads.fg.system = rgb
