weechat: Auto updates.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -185,8 +185,8 @@ foonetic.msg_kick
 foonetic.msg_part
 foonetic.msg_quit
 foonetic.notify
-freenode.addresses = "freenodeok2gncmy.onion/6697"
-freenode.proxy = "tor"
+freenode.addresses = "chat.freenode.net/6697"
+freenode.proxy
 freenode.ipv6
 freenode.ssl = on
 freenode.ssl_cert
@@ -212,7 +212,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -309,7 +309,7 @@ nixers.ssl = on
 nixers.ssl_cert
 nixers.ssl_priorities
 nixers.ssl_dhkey_size
-nixers.ssl_fingerprint = "b8c4c5e12b56dc3dd21e5cfccf71d23bb7c8ff8e"
+nixers.ssl_fingerprint
 nixers.ssl_verify
 nixers.password = "${sec.data.nixers}"
 nixers.capabilities
@@ -368,7 +368,7 @@ bitlbee.realname
 bitlbee.local_hostname
 bitlbee.command
 bitlbee.command_delay
-bitlbee.autojoin = "&bitlbee,#twitter_zamjnw5"
+bitlbee.autojoin = "&bitlbee,#twitter_zamjnw5,&steam"
 bitlbee.autorejoin
 bitlbee.autorejoin_delay
 bitlbee.connection_timeout
