i3: Use script to rename workspaces

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -37,38 +37,27 @@ bindsym $mod+space focus mode_toggle
 
 bindsym $mod+a focus parent
 
-set $1 1: WEB
-set $2 2: IRC
-set $3 3: MAIL
-set $4 4
-set $5 5
-set $6 6
-set $7 7
-set $8 8
-set $9 9
-set $10 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
-bindsym $mod+1 workspace number $1
-bindsym $mod+2 workspace number $2
-bindsym $mod+3 workspace number $3
-bindsym $mod+4 workspace number $4
-bindsym $mod+5 workspace number $5
-bindsym $mod+6 workspace number $6
-bindsym $mod+7 workspace number $7
-bindsym $mod+8 workspace number $8
-bindsym $mod+9 workspace number $9
-bindsym $mod+0 workspace number $10
-
-bindsym $mod+Shift+1 move container to workspace number $1
-bindsym $mod+Shift+2 move container to workspace number $2
-bindsym $mod+Shift+3 move container to workspace number $3
-bindsym $mod+Shift+4 move container to workspace number $4
-bindsym $mod+Shift+5 move container to workspace number $5
-bindsym $mod+Shift+6 move container to workspace number $6
-bindsym $mod+Shift+7 move container to workspace number $7
-bindsym $mod+Shift+8 move container to workspace number $8
-bindsym $mod+Shift+9 move container to workspace number $9
-bindsym $mod+Shift+0 move container to workspace number $10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 bindsym $mod+Shift+c exec ~/.config/i3/preproc.sh ; reload
 bindsym $mod+Shift+r restart
@@ -143,6 +132,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-mute 0 false ; 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-mute 0 false ; exec pactl -- set-sink-volume 0 +5%
 
 bindsym $mod+Shift+numbersign exec --no-startup-id python ~/scripts/dmenu_mpd
+bindsym $mod+numbersign exec --no-startup-id ~/scripts/rofi_i3ws
 
 
 
