--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,6 +5,19 @@ set $mod Mod1
 font pango:ohsnap 12
 floating_modifier $mod
 
+
+set_from_resource $background  background #000000
+set_from_resource $foreground  foreground #ffffff
+set_from_resource $colour_grey color8     #666666
+set_from_resource $colour_red  color1     #ab4642
+
+#  _  __          _     _           _ _                 
+# | |/ /___ _   _| |__ (_)_ __   __| (_)_ __   __ _ ___ 
+# | ' // _ \ | | | '_ \| | '_ \ / _` | | '_ \ / _` / __|
+# | . \  __/ |_| | |_) | | | | | (_| | | | | | (_| \__ \
+# |_|\_\___|\__, |_.__/|_|_| |_|\__,_|_|_| |_|\__, |___/
+#           |___/                             |___/     
+
 bindsym $mod+Return exec ~/scripts/urxvt
 
 bindsym $mod+Shift+q kill
@@ -47,6 +60,7 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
+bindsym $mod+grave workspace back_and_forth
 
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -61,6 +75,18 @@ bindsym $mod+Shift+0 move container to workspace number 10
 
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym $mod+Shift+p exec --no-startup-id mpc toggle
+bindsym $mod+Shift+bracketleft exec --no-startup-id mpc prev
+bindsym $mod+Shift+bracketright exec --no-startup-id mpc next
+bindsym $mod+Shift+minus exec --no-startup-id mpc volume -10
+bindsym $mod+Shift+plus exec --no-startup-id mpc volume +10
+bindsym $mod+Shift+semicolon exec touch "/tmp/${DISPLAY}_lockmachine"
+
+bindsym $mod+p exec rofipassmenu
+
+bindsym $mod+Shift+numbersign exec --no-startup-id python ~/scripts/dmenu_mpd
+bindsym $mod+numbersign exec --no-startup-id ~/scripts/rofi_i3ws
 
 mode "resize" {
 
@@ -86,6 +112,14 @@ mode "builtin" {
 bindsym $mod+r mode "resize"
 bindsym $mod+c mode "builtin"
 
+
+#  ____             
+# | __ )  __ _ _ __ 
+# |  _ \ / _` | '__|
+# | |_) | (_| | |   
+# |____/ \__,_|_|   
+#                   
+
 set_from_resource $bar_font i3bar.font pango:ohsnap 15
 
 bar {
@@ -96,50 +130,48 @@ bar {
     font $bar_font
 
     colors {
-        background #000000
-        statusline #dddddd
+        background $background
+        statusline $foreground
 
-        focused_workspace #151515 #151515 #ffffff
-        active_workspace #151515 #151515 #ffffff
-        inactive_workspace #151515 #151515 #888888
-        urgent_workspace #151515 #151515 #ff0000
+        focused_workspace $background $background $foreground
+        active_workspace $background $background $foreground
+        inactive_workspace $background $background $colour_grey
+        urgent_workspace $background $background $colour_red
     }
 }
 
+#  _____ _                    _             
+# |_   _| |__   ___ _ __ ___ (_)_ __   __ _ 
+#   | | | '_ \ / _ \ '_ ` _ \| | '_ \ / _` |
+#   | | | | | |  __/ | | | | | | | | | (_| |
+#   |_| |_| |_|\___|_| |_| |_|_|_| |_|\__, |
+#                                     |___/ 
 
 new_window 1pixel
 hide_edge_borders both
-
 workspace_auto_back_and_forth yes
-bindsym $mod+Shift+p exec --no-startup-id mpc toggle
-bindsym $mod+Shift+bracketleft exec --no-startup-id mpc prev
-bindsym $mod+Shift+bracketright exec --no-startup-id mpc next
-bindsym $mod+Shift+minus exec --no-startup-id mpc volume -10 ; exec dunstify -a "MPD" -r 500 "                          MPD" "$(mpc volume)"
-bindsym $mod+Shift+plus exec --no-startup-id mpc volume +10 ; exec dunstify -a "MPD" -r 500 "                          MPD" "$(mpc volume)"
-bindsym $mod+Shift+semicolon exec touch "/tmp/${DISPLAY}_lockmachine"
-bindsym $mod+grave workspace back_and_forth
 
-bindsym $mod+p exec rofipassmenu
+#     _            _                                  _       
+#    / \   ___ ___(_) __ _ _ __  _ __ ___   ___ _ __ | |_ ___ 
+#   / _ \ / __/ __| |/ _` | '_ \| '_ ` _ \ / _ \ '_ \| __/ __|
+#  / ___ \\__ \__ \ | (_| | | | | | | | | |  __/ | | | |_\__ \
+# /_/   \_\___/___/_|\__, |_| |_|_| |_| |_|\___|_| |_|\__|___/
+#                    |___/                                    
 
-bindsym XF86AudioPlay exec mpc --no-startup-id toggle
-bindsym XF86AudioStop exec mpc --no-startup-id stop
-bindsym XF86AudioPrev exec mpc --no-startup-id prev
-bindsym XF86AudioNext exec mpc --no-startup-id next
+for_window [class="^qutebrowser$"] move --no-auto-back-and-forth to workspace number 1
+for_window [title="^Weechat$"] move --no-auto-back-and-forth workspace number 2
+for_window [title="^mutt$"] move --no-auto-back-and-forth workspace number 3
+for_window [title="^Deluge$"] move --no-auto-back-and-forth workspace number 8
+for_window [title="^Mumble"] move --no-auto-back-and-forth workspace number 8
+for_window [title="^Bitcoin Core - Wallet"] move --no-auto-back-and-forth workspace number 8
+for_window [title="^Counter-Strike Source - OpenGL"] move --no-auto-back-and-forth workspace number 9
+for_window [class="^Steam$"] move --no-auto-back-and-forth workspace number 10
 
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-mute 0 false ; exec pactl -- set-sink-volume 0 -5%
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-mute 0 false ; exec pactl -- set-sink-volume 0 +5%
-
-bindsym $mod+Shift+numbersign exec --no-startup-id python ~/scripts/dmenu_mpd
-bindsym $mod+numbersign exec --no-startup-id ~/scripts/rofi_i3ws
-
+# XXX The above is a hack! Remove when issue https://github.com/i3/i3/issues/2590 is closed.  XXX
 
 for_window [class="^Steam$" title=" - Chat$"] floating enable
 for_window [title="^mutt-mailto$"] floating enable
 for_window [title="^rofi-ssh$"] floating enable
 for_window [title="^feh-qrcode$"] floating enable
 for_window [class = "soffice" title="^Text Import - "] floating enable
-
 for_window [title="REQUEST_FLOATING_WINDOW"] floating enable
-
-exec --no-startup-id hsetroot -fill scripts/data/wallpaper.png
