qutebrowser: forward all unbound keys

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -543,7 +543,7 @@ partial-timeout = 5000
 insert-mode-on-plugins = false
 auto-leave-insert-mode = true
 auto-insert-mode = true
-forward-unbound-keys = auto
+forward-unbound-keys = all
 spatial-navigation = false
 links-included-in-focus-chain = true
 rocker-gestures = false
