--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -1539,11 +1539,11 @@ prompts.selected.bg = #308cc6
 # prompts (Font):
 #     Font used for prompts.
 #     Default: 8pt sans-serif
-_monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
+_monospace = "tamsyn", Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
 completion = 8pt ${_monospace}
 completion.category = bold ${completion}
 tabbar = 8pt ${_monospace}
-statusbar = 8pt Ohsnap, ${_monospace}
+statusbar = 8pt ${_monospace}
 downloads = 8pt ${_monospace}
 hints = bold 13px Terminus
 debug-console = 8pt ${_monospace}
@@ -1561,4 +1561,4 @@ keyhint = 8pt ${_monospace}
 messages.error = 8pt ${_monospace}
 messages.warning = 8pt ${_monospace}
 messages.info = 8pt ${_monospace}
-prompts = 8pt sans-serif
+prompts = ${_monospace}
