weechat: Automated changes.

--- a/weechat/.config/weechat/irc.conf
+++ b/weechat/.config/weechat/irc.conf
@@ -185,8 +185,8 @@ foonetic.msg_kick
 foonetic.msg_part
 foonetic.msg_quit
 foonetic.notify
-freenode.addresses = "chat.freenode.net/6697"
-freenode.proxy
+freenode.addresses = "freenodeok2gncmy.onion/6697"
+freenode.proxy = "tor"
 freenode.ipv6
 freenode.ssl = on
 freenode.ssl_cert
@@ -212,7 +212,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,##linux,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#archlinux-classroom,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot #android #cyanogenmod"
+freenode.autojoin = "#archlinux,#Cyanogenmod,#firefox,#freenode,#i3,#latex,#python,#qutebrowser,#vim,#weechat,#bash,#github,##security,#mutt,#gnupg,#blender,#youtube-dl,#borgbackup,#android,#android-root,#mps-youtube,#weechat-android,#ledger,#neomutt,#connectbot,#transmission,#linageos #android #cyanogenmod"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -251,7 +251,7 @@ furnet.realname
 furnet.local_hostname
 furnet.command
 furnet.command_delay
-furnet.autojoin = "#gamerfurs,#SoftPaws,#redditfurs,#uk"
+furnet.autojoin = "#gamerfurs,#redditfurs,#SoftPaws,#uk"
 furnet.autorejoin
 furnet.autorejoin_delay
 furnet.connection_timeout
@@ -264,7 +264,7 @@ furnet.msg_part
 furnet.msg_quit
 furnet.notify
 twitch.addresses = "irc.chat.twitch.tv/6667"
-twitch.proxy
+twitch.proxy = "tor"
 twitch.ipv6
 twitch.ssl = off
 twitch.ssl_cert
@@ -290,7 +290,7 @@ twitch.realname
 twitch.local_hostname
 twitch.command
 twitch.command_delay
-twitch.autojoin = "#nerdcubed"
+twitch.autojoin = "#nerdcubed,#rossbroadcast"
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
@@ -381,7 +381,7 @@ bitlbee.msg_part
 bitlbee.msg_quit
 bitlbee.notify
 overthewire.addresses = "ircs.overthewire.org/6697"
-overthewire.proxy
+overthewire.proxy = "tor"
 overthewire.ipv6
 overthewire.ssl = on
 overthewire.ssl_cert
@@ -420,7 +420,7 @@ overthewire.msg_part
 overthewire.msg_quit
 overthewire.notify
 oftc.addresses = "irc.oftc.net"
-oftc.proxy
+oftc.proxy = "tor"
 oftc.ipv6
 oftc.ssl
 oftc.ssl_cert
